# LightGCN

./: .gitignore  README.md  pyproject.toml
lightgcn/: columns.py  dataset.py  embedding.py  loss.py  metrics.py  network.py  train.py
tests/: dataset_test.py  embedding_test.py  network_test.py  test_lightgcn.py  trian_test.py
tests/helper/: __init__.py  movielens_data.py  movielens_data_test.py  sample_data.tsv
