[tool.poetry]
name = "lightgcn"
version = "0.1.0"
description = ""
authors = ["sdual <shr.nrht.0623@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "2.3.0"
torchvision = "0.18.0"
torchaudio = "2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["venv", ".venv"]
